RESOLVED FIXED71307
De-virtualize JSObject::getOwnPropertyNames
https://bugs.webkit.org/show_bug.cgi?id=71307
Summary De-virtualize JSObject::getOwnPropertyNames
Mark Hahnenberg
Reported 2011-11-01 11:08:12 PDT
We're de-virtualizing JSObject. getOwnPropertyNames is a virtual method in JSObject. Thus, we need to de-virtualize getOwnPropertyNames. We'll put it in the MethodTable.
Attachments
Patch (72.39 KB, patch)
2011-11-01 16:40 PDT, Mark Hahnenberg
darin: review+
Mark Hahnenberg
Comment 1 2011-11-01 16:40:03 PDT
Mark Hahnenberg
Comment 2 2011-11-02 17:29:10 PDT
Sam Weinig
Comment 4 2011-11-02 20:30:03 PDT
(In reply to comment #3) > I think this caused crashes: http://build.webkit.org/results/SnowLeopard%20Intel%20Debug%20(Tests)/r99126%20(2813)/results.html. I bet this crash is due to not passing the right this object in JSDOMWindowShell::getOwnPropertyNames. The shell is being passed instead of window().
Sam Weinig
Comment 5 2011-11-02 20:33:57 PDT
Crash fixed in r99135.
Note You need to log in before you can comment on or make changes to this bug.