Fix crashing tests after r99126 (commit for https://bugs.webkit.org/show_bug.cgi?id=71307)

Reviewed by Adam Roben.

* bindings/js/JSDOMWindowShell.cpp:
(WebCore::JSDOMWindowShell::getOwnPropertyNames):
Since we are proxying to the window, we need to pass it as the this object,
not the shell.



Canonical link: https://commits.webkit.org/87726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99135 268f45cc-cd09-0410-ab3c-d52691b4dbfc